plugins {
  id 'org.springframework.boot' version '2.6.7'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'java'
}

group = 'hr.fer.infsus'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '18'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  compileOnly 'org.projectlombok:lombok'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  runtimeOnly 'org.postgresql:postgresql'
  annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'

  implementation 'org.springframework.boot:spring-boot-starter-validation:2.6.7'
  implementation 'org.modelmapper:modelmapper:3.1.0'
  runtimeOnly 'com.h2database:h2'

  annotationProcessor "org.hibernate:hibernate-jpamodelgen"
}

tasks.named('test') {
  useJUnitPlatform()
}
